# flake-lang.nix

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SUPPORT.md  api_reference.html  flake.nix  hercules-ci.nix  index.html  introduction.html  pkgs.nix  pre-commit.nix  print.html  searchindex.js  searchindex.json  settings.nix  toc.html  toc.js
docs/: .envrc  .gitignore  book.toml  build.nix
docs/src/: SUMMARY.md  introduction.md
examples/: build.nix  pre-commit.nix
examples/haskell-flake-project/: .envrc  build.nix
examples/haskell-flake-project-with-extra-dependency/: .envrc  CHANGELOG.md  build.nix  haskell-flake-project-with-extra-dependency.cabal
examples/haskell-plutus-flake-project/: .envrc  CHANGELOG.md  build.nix  haskell-flake-project.cabal  haskell-plutus-flake-project.cabal
examples/haskell-plutus-flake-project/app/: Main.hs
examples/haskell-plutus-flake-project/src/: Validator.hs
examples/purescript-flake-project/: .envrc  .gitignore  build.nix  package-lock.json  package.json  spago-packages.nix  spago.dhall  webpack.config.cjs
examples/purescript-flake-project/app/: index.js
examples/purescript-flake-project/esbuild/: bundle.js
examples/rust-flake-project/: .envrc  Cargo.toml  build.nix
examples/rust-flake-project-cross-compilation/: .envrc  Cargo.toml  build.nix
examples/rust-flake-project-with-extra-dependency/: .envrc  .extras  .gitignore  Cargo.toml  build.nix
examples/typescript-flake-project/: .gitignore  build.nix  package-lock.json  package.json
examples/typescript-flake-project-with-extra-dependency/: build.nix  package-lock.json  package.json
examples/typescript-flake-project-with-transitive-extra-dependency/: build.nix  package-lock.json  package.json
flake-lang/: build.nix  flake-haskell-plutus.nix  flake-haskell.nix  flake-purescript.nix  flake-rust.nix  flake-typescript.nix  haskell-data.nix
flake-lang/haskell.nix/: extra-hackage.nix  plutus.nix
flake-lang/pre-commit-hooks/: deno.nix  rust-monorepo.nix  tools.nix
flake-lang/purescript/: purescript-project.nix
flake-lang/rust/: description.md  flake-rust.nix
flake-lang/typescript/: description.md  flake-typescript.nix  npm-extra-dependencies.nix
templates/: build.nix
templates/haskell/: .gitignore  LICENSE  build.nix  example.cabal  flake.nix  settings.nix
templates/haskell/app/: Main.hs
templates/rust/: .gitignore  build.nix  flake.nix
templates/rust-monorepo/: .gitignore  build.nix  flake.nix  pre-commit.nix  settings.nix
templates/typescript/: .envrc  .gitignore  build.nix  flake.nix  package-lock.json  package.json
tests/: build.nix
tests/haskell-flake-project/: build.nix  haskell-flake-project.cabal
tests/rust-flake-project/: .envrc
tests/typescript-flake-project/: package.json
tests/typescript-flake-project-with-extra-dependency/: build.nix  package-lock.json  package.json
(+10 files in other folders)
