cabal-version:   3.0
name:            haskell-plutus-flake-project
version:         0.1.0.0

-- synopsis:
description:
  Dummy project to quickly demonstrate that the nix facilities work

license:         Apache-2.0
license-file:    LICENSE
author:          jared
maintainer:      <>

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options:        -Wall
  default-extensions:
    DataKinds
    FlexibleContexts
    ImportQualifiedPost
    NoImplicitPrelude
    ScopedTypeVariables
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           warnings
  exposed-modules:  Validator

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base
    , bytestring
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , serialise

  hs-source-dirs:   src
  default-language: Haskell2010

executable haskell-plutus-flake-project
  import:           warnings
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base
    , bytestring
    , haskell-plutus-flake-project
    , hex
    , plutus-tx

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite haskell-plutus-flake-project-test
  import:           warnings
  default-language: Haskell2010

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base
    , haskell-plutus-flake-project
