cabal-version:   3.0
name:            haskell-flake-project
version:         0.1.0.0

-- synopsis:
description:
  Dummy project to quickly demonstrate that the nix facilities work

license:         Apache-2.0
license-file:    LICENSE
author:          jared
maintainer:      <>

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  MyLib

  -- other-modules:
  -- other-extensions:
  build-depends:    base
  hs-source-dirs:   src
  default-language: Haskell2010

executable haskell-flake-project
  import:           warnings
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base
    , haskell-flake-project

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite haskell-flake-project-test
  import:           warnings
  default-language: Haskell2010

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base
    , haskell-flake-project
